--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,4 @@ jobs:
         touch .env 
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
     - run: npm run build --if-present
+    - run: npm run start
