--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,13 +2,12 @@ name: Node.js CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
-
     runs-on: self-hosted
 
     strategy:
@@ -17,16 +16,16 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm install -g @nestjs/cli  # Install NestJS CLI globally
-    - run: |
-        touch .env 
-        echo "${{ secrets.PROD_ENV_FILE }}" > .env
-    - run: npm run build --if-present
-    - run: npm run start
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm install -g @nestjs/cli # Install NestJS CLI globally
+      - run: |
+          touch .env 
+          echo "${{ secrets.PROD_ENV_FILE }}" > .env
+      - run: npm run build --if-present
+      - run: npm run start:prod &
