--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,5 @@ jobs:
           touch .env 
           echo "${{ secrets.PROD_ENV_FILE }}" > .env
       - run: npm run build --if-present
-      - run: npm run start:prod &
+      - run: npm install -g pm2
+      - run: pm2 restart url-shortener || pm2 start dist/main.js --name url-shortener
