--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.8",
     "@nestjs/swagger": "^11.0.3",
+    "assert": "^2.1.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.7",
     "nestjs-zod": "^3.0.0",
