complted analytics module

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^11.0.8",
     "@nestjs/swagger": "^11.0.3",
     "assert": "^2.1.0",
+    "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.7",
     "nestjs-zod": "^3.0.0",
@@ -39,6 +41,7 @@
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "useragent": "^2.3.0",
     "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
@@ -52,6 +55,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.0",
+    "@types/useragent": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
